--- a/src/app/reservation/overview/overview.component.scss
+++ b/src/app/reservation/overview/overview.component.scss
@@ -2,6 +2,13 @@
     width: 100%;
 }
 
+.payment-method-selector > label {
+    flex-basis: 100%;
+    padding:0;
+    padding-top:6px;
+    padding-bottom:6px;
+    font-size: 95%;
+}
 
 /* source: https://stackoverflow.com/a/24349758 */
 
