--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -77,7 +77,7 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-9">
               <div class="row">
-                <div class="order-1 col-6 text-right"><button type="submit" class="btn btn-success">{{ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign' | translate}}</button></div>
+                <div class="order-1 col-6 text-right"><button type="submit" class="btn btn-success">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button></div>
                 <div class="order-0 col-6"><button type="button" (click)="ticketsFormShow[ticket.uuid] = false" translate="reservation-page-complete.cancel" class="btn btn-outline-dark" *ngIf="ticket.assigned"></button></div>
               </div>
             </div>
