--- a/src/app/reservation/success/success.component.scss
+++ b/src/app/reservation/success/success.component.scss
@@ -12,3 +12,10 @@ p.ticket-info {
     background-color: #fff;
     border-color: #ccc;
 }
+
+.btn-xs {
+    padding: .30rem .5rem;
+    font-size: .875rem;
+    line-height: .5;
+    border-radius: .2rem;
+}
