--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -56,9 +56,19 @@
           <span [innerHtml]="'reservation-page-complete.assigned-to' | translate: {'0': ticket.fullName, '1': ticket.email}"></span>
           <ng-container *ngIf="ticket.cancellationEnabled">
             {{' '}}
-            <button type="button" class="btn btn-xs btn-danger"><fa-icon [icon]="['fa', 'eraser']" size="xs"></fa-icon> {{'reservation-page-complete.release-button.text'|translate}}</button>
+            <button type="button" class="btn btn-xs btn-danger" (click)="ticketsReleaseShow[ticket.uuid] = true"><fa-icon [icon]="['fa', 'eraser']" size="xs"></fa-icon> {{'reservation-page-complete.release-button.text'|translate}}</button>
           </ng-container>
         </p>
+
+        <div tabindex="-1" role="dialog" *ngIf="ticketsReleaseShow[ticket.uuid]">
+          <div class="alert alert-danger">
+            <h4>{{'reservation-page-complete.confirm-cancellation.text' | translate}}{{' '}}
+              <button type="button" (click)="ticketsReleaseShow[ticket.uuid] = false" class="btn btn-default cancel-update" translate="reservation-page-complete.confirm-cancellation.button.no"></button>
+              {{' '}}
+              <button type="button" (click)="releaseTicket(ticket)" class="btn btn-danger" translate="reservation-page-complete.confirm-cancellation.button.yes"></button>
+            </h4>
+          </div>
+        </div>
 
         <div class="row">
           <div class="col-lg-3 col-sm-6 col-xs-12 wMarginBottom">
