--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -18,13 +18,13 @@
       <div class="col-12 col-sm-6">
         <div class="form-group">
           <label for="first-name">{{'common.first-name'|translate}}{{' '}}*</label>
-          <input id="first-name" class="form-control" formControlName="firstName" type="text" autocomplete="fname" maxlength="255" appInvalidFeedback>
+          <input id="first-name" class="form-control" formControlName="firstName" type="text" #contactFirstName autocomplete="fname" maxlength="255" appInvalidFeedback (change)="handleAutocomplete('firstName', contactFirstName.value)">
         </div>
       </div>
       <div class="col-12 col-sm-6">
         <div class="form-group">
           <label for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
-          <input id="last-name" class="form-control" formControlName="lastName" type="text" autocomplete="lname" maxlength="255" appInvalidFeedback>
+          <input id="last-name" class="form-control" formControlName="lastName" type="text" #contactLastName autocomplete="lname" maxlength="255" appInvalidFeedback (change)="handleAutocomplete('lastName', contactLastName.value)">
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
       <div class="col-12">
         <div class="form-group">
             <label for="email">{{'common.email'|translate}}{{' '}}*</label>
-            <input id="email" class="form-control" formControlName="email" type="email" autocomplete="email" maxlength="255" appInvalidFeedback>
+            <input id="email" class="form-control" formControlName="email" type="email" #contactLastEmail autocomplete="email" maxlength="255" appInvalidFeedback (change)="handleAutocomplete('email', contactLastEmail.value)">
         </div>
       </div>
     </div>
