--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,3 +134,11 @@ label.radio-inline {
 .c-container > div {
     display: inline-block;
 }
+
+
+.btn-xs {
+    padding: .30rem .5rem;
+    font-size: .875rem;
+    line-height: .5;
+    border-radius: .2rem;
+}
