handle conditions to show update ticket owner message #1

--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -40,7 +40,7 @@
   </div>
 
 
-  <div>
+  <div *ngIf="event.assignmentConfiguration.enableTicketTransfer && ticketsAllAssigned && unlockedTicketCount > 0">
       <p class="bg-info ticket-info" translate="reservation-page-complete.info-update"></p>
   </div>
 
