--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,8 @@ html[lang=en] .language-selector button[lang=en],
 html[lang=it] .language-selector button[lang=it],
 html[lang=fr] .language-selector button[lang=fr],
 html[lang=ro] .language-selector button[lang=ro],
-html[lang=pt] .language-selector button[lang=pt] {
+html[lang=pt] .language-selector button[lang=pt],
+html[lang=tr] .language-selector button[lang=tr] {
     font-weight: bold;
 }
 
