--- a/src/app/event-display/event-display.component.css
+++ b/src/app/event-display/event-display.component.css
@@ -7,3 +7,8 @@ h2 {
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+.promo-code-input {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
