--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -108,7 +108,12 @@
                         </div>
                         <div class="col-sm-3">
                           <span *ngIf="category.free" translate="common.free"></span>
-                          <span *ngIf="!category.free">{{category.formattedFinalPrice}} {{event.currency}} <fa-icon [icon]="['fa', 'info-circle']" class="text-info" ngbTooltip="{{(event.vatIncluded ? 'show-event.incVat' : 'show-event.excVat') | translate:{'0': event.vat, '1': 'TODO'} }}"></fa-icon></span>
+                          <span *ngIf="!category.free">
+                            <ng-container *ngIf="category.hasDiscount"><del>{{category.formattedFinalPrice}}</del>{{' '}}<mark>{{category.formattedDiscountedPrice}}</mark> {{event.currency}}</ng-container>
+                            <ng-container *ngIf="!category.hasDiscount">{{category.formattedFinalPrice}} {{event.currency}}</ng-container>
+                            {{' '}}
+                            <fa-icon [icon]="['fa', 'info-circle']" class="text-info" ngbTooltip="{{(event.vatIncluded ? 'show-event.incVat' : 'show-event.excVat') | translate:{'0': event.vat, '1': 'TODO'} }}"></fa-icon>
+                          </span>
                         </div>
                         <div class="col-sm-2">
                           <ng-container *ngIf="category.saleableAndLimitNotReached">
