remove if applicable in billingAddressCompany #1

--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -27,7 +27,7 @@
       <div class="col-12">
           <div class="form-group">
               <label for="billingAddressCompany" class="control-label" translate="reservation-page-complete.company"></label>
-              <input id="billingAddressCompany" formControlName="billingAddressCompany" class="form-control" type="text" maxlength="255" [attr.placeholder]="'reservation-page.if-applicable'|translate" appInvalidFeedback>
+              <input id="billingAddressCompany" formControlName="billingAddressCompany" class="form-control" type="text" maxlength="255" appInvalidFeedback>
           </div>
       </div>
   </div>
